<resources>
    <string name="app_name">Project Athena 1.3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">Log Out</string>
    <string name="mathematics">Mathematics</string>
    <string name="literacy">Literacy</string>
    <string name="city">City</string>
    <string name="to_do">To Do</string>
    <string name="choose_language">Choose Language</string>
    <string name="achievements">Achievements</string>
    <string name="dashboard">Dashboard</string>
    <string name="usernamePlaceholder">[Username]</string>
    <string name="resourceAmountPlaceholder">99+</string>
    <string name="b_enterCity">Go to your city</string>
    <string name="latest_achievements">Latest Achievements:</string>
    <string name="all_achievements">All achievements:</string>
    <string name="achievementNamePlaceholder">[Achievement]</string>
    <string name="recent_activity">Recent Activity:</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="placeholderEmail">fakeuser@fakemail.poop</string>
    <string name="chooseLanguageString">Choose your language</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="arabic">Arabic</string>
    <string name="greek">Greek</string>
    <string name="module_name_placeholder">[Module Title]</string>

    <string name="goals">Goals and to-do:</string>
    <string name="recentActivities">Recent activities:</string>
    <string name="grade7">7th grade</string>
    <string name="grade8">8th grade</string>
    <string name="grade9">9th grade</string>
    <string name="grade10">10th grade</string>
    <string name="grade11">11th grade</string>
    <string name="grade12">12th grade</string>
    <string name="languages">Languages</string>
    <string name="passwordPlaceholder">[PASSWORD]</string>
    <string name="prompt_password">Change Password</string>
    <string name="prompt_email">Change Email</string>
    <string name="settings">Settings</string>
    <string name="downloading_materials1">downloading materials 1</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="email">Email</string>
</resources>