<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FragmentLanguages">
    <TextView
        android:id="@+id/tv_chooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/chooseLanguageString"
        android:gravity="center"
        android:textSize="40dp"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />
    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        app:layout_constraintTop_toBottomOf="@id/tv_chooseLanguage"
        />

    <Button
        android:id="@+id/englishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="goToMenu"

        android:text="@string/english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chooseLanguage" />

    <Button
        android:id="@+id/turkishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="50dp"
        android:text="@string/turkish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishButton" />

    <Button
        android:id="@+id/arabicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        android:text="@string/arabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/turkishButton" />

    <Button
        android:id="@+id/greekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        android:text="@string/greek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arabicButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
